# Celestite-Legacy

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xiaozhao45/celestite/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cqm
app/src/main/cpp/: .gitignore  CMakeLists.txt  JNI.c  README.md  main.c
app/src/main/cpp/include/: calendar.h  comline.h  data.h  define.h  qimenZg.h  qimenbasic.h  qimenyp.h  qimenzpzr.h
app/src/main/cpp/src/: calendar.c  comline.c  data.c  qimenZg.c  qimenbasic.c  qimenyp.c  qimenzpzr.c
app/src/main/java/com/xiaozhao45/celestite/: MainActivity.kt  QiJuCalc.kt  Seletor.kt  Test.kt
app/src/main/java/com/xiaozhao45/celestite/ui/theme/: Color.kt  Theme.kt  ThemeMode.kt  ThemeRepository.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/xiaozhao45/celestite/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
